--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 ansi_term = "0.12.1"
+futures = "0.3.30"
 inquire = "0.7.0"
 tokio = { version = "1.36.0", features = ["full"] }
