--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 ansi_term = "0.12.1"
 futures = "0.3.30"
 inquire = "0.7.0"
+reqwest = "0.11.24"
 tokio = { version = "1.36.0", features = ["full"] }
