--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "inquire-test"
+name = "learn-async"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 ansi_term = "0.12.1"
+chrono = "0.4.34"
 futures = "0.3.30"
 inquire = "0.7.0"
 reqwest = "0.11.24"
