--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 [dependencies]
 ansi_term = "0.12.1"
 chrono = "0.4.34"
+color-eyre = "0.6.2"
+crossterm = { version = "0.27.0", features = ["event-stream"] }
 futures = "0.3.30"
 inquire = "0.7.0"
+ratatui = "0.26.1"
 reqwest = "0.11.24"
 tokio = { version = "1.36.0", features = ["full"] }
+tokio-util = "0.7.10"
