--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2021"
 ansi_term = "0.12.1"
 chrono = "0.4.34"
 color-eyre = "0.6.2"
-crossterm = { version = "0.27.0", features = ["event-stream"] }
+crossterm = { version = "0.27.0", features = ["event-stream", "serde"] }
 futures = "0.3.30"
 inquire = "0.7.0"
-ratatui = "0.26.1"
+log = "0.4.21"
+ratatui = { version = "0.26.1", features = ["serde", "macros"] }
 reqwest = "0.11.24"
+serde = { version = "1.0.197", features = ["derive"] }
+signal-hook = "0.3.17"
 tokio = { version = "1.36.0", features = ["full"] }
 tokio-util = "0.7.10"
